--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
   <version>6.8</version>
   <scope>test</scope>
 </dependency>
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>6.14.2</version>
+      <scope>compile</scope>
+    </dependency>
 
   </dependencies>
 </project>
